<resources>
    <string name="app_name">Vakanciya.az</string>
    <string name="action_settings">Settings</string>

    <string name="saveOk">Данные успешно сохранены!</string>
    <string name="str_home">Главная</string>
    <string name="str_basket">Избранные</string>
    <string name="str_search">Поиск</string>
    <string name="str_profile">Профиль</string>
    <string name="tv_sign">Войти</string>

    <string name="setting">Настройки</string>
    <string name="setting_1">Политика приложения</string>
    <string name="setting_2">Правила размещения объявления</string>
    <string name="setting_3">Выйти из Аккаунта</string>
    <string name="we">МЫ</string>
    <string name="b_save">Сохранить</string>


    ////PolicyFragment
    <string name="app_policy_title">Политика\nПриложения</string>
    <string name="app_policy_1">Добро пожаловать в приложение "Vakanciya.az"! Наша политика приложения охватывает следующие основные моменты:</string>
    <string name="app_policy_2">Цель приложения: Мы предоставляем возможность размещения вакансий и поиска работы, обеспечивая качественное взаимодействие между работодателями и соискателями.</string>
    <string name="app_policy_3">Безопасность и конфиденциальность: Мы обеспечиваем безопасность ваших данных и стремимся сохранить конфиденциальность вашей личной информации. Пожалуйста, ознакомьтесь с нашей политикой конфиденциальности для получения дополнительной информации.</string>
    <string name="app_policy_4">Размещение вакансий: Мы призываем пользователей размещать вакансии с уважением к правилам и нормам. Нарушение этих правил может привести к блокировке аккаунта.</string>
    <string name="app_policy_5">Ответственность пользователя: Пользователи несут ответственность за размещаемый контент и обязаны следовать этическим стандартам и законам.</string>
    <string name="app_policy_6">Согласие на обработку личных данных в приложении "Vakanciya.az"</string>
    <string name="app_policy_7">1) Общие положения: Используя приложение "Vakanciya.az", пользователь соглашается предоставлять следующие личные данные: номер телефона и адрес электронной почты.</string>
    <string name="app_policy_8">2) Цели сбора данных: Номер телефона используется для создания учетной записи и обеспечения связи между пользователями в контексте размещения вакансий. Адрес электронной почты может использоваться для уведомлений и обратной связи.</string>
    <string name="app_policy_9">3) Безопасность данных: Мы принимаем меры для обеспечения безопасности собранных данных и стремимся предотвратить их несанкционированное использование или распространение.</string>
    <string name="app_policy_10">4) Обработка данных: Личные данные пользователя могут использоваться для анализа и улучшения функциональности приложения, а также для предоставления персонализированного опыта.</string>
    <string name="app_policy_11">5) Отзыв согласия: Пользователь вправе отозвать свое согласие на обработку личных данных, связавшись с нами через раздел поддержки приложения.</string>
    <string name="app_policy_12">6) Сроки хранения данных: Личные данные пользователя могут храниться до тех пор, пока они не будут необходимы для целей, описанных в настоящем согласии.</string>
    <string name="app_policy_13">Пользование приложением "Vakanciya.az" подразумевает ваше согласие с этими условиями обработки личных данных. Пожалуйста, внимательно ознакомьтесь с нашей политикой конфиденциальности для получения более подробной информации.</string>
    <string name="app_policy_14">Противодействие Мошенничеству и Нарушениям в Приложении "Vakanciya.az"</string>
    <string name="app_policy_15">1) Идентификация и Блокировка: Мы активно мониторим деятельность пользователей и идентифицируем потенциальных мошенников. Алгоритмы безопасности и ручные проверки позволяют нам блокировать аккаунты, нарушающие правила использования.</string>
    <string name="app_policy_16">2) Запрет спама: Запрещено размещение спама и нежелательной рекламы. Мы используем фильтры и анализ содержания, чтобы выявлять и блокировать такие активности.</string>
    <string name="app_policy_17">3) Проверка информации: Мы регулярно проверяем размещаемую информацию на достоверность. Пользователи, предоставляющие ложные данные, могут быть подвергнуты блокировке.</string>
    <string name="app_policy_18">4) Нулевая терпимость к мошенничеству: Мы применяем нулевую терпимость к мошенничеству. Активности, нарушающие законы или правила приложения, приведут к немедленной блокировке аккаунта.</string>
    <string name="app_policy_19">5) Обратная связь от пользователей: Пользователи могут сообщать о подозрительной деятельности через раздел поддержки в приложении. Мы принимаем эти сообщения во внимание при обеспечении безопасности сообщества.</string>
    <string name="app_policy_20">20) О нас: Мы — команда, стремящаяся создать безопасное и надежное пространство для пользователей. Наша политика нулевой терпимости к нарушениям призвана обеспечить вашу безопасность и удовлетворение от использования приложения "Vakanciya.az".</string>
    <string name="app_policy_21">Обратная связь и Поддержка в Приложении "Vakanciya.az"</string>
    <string name="app_policy_22">1) Ценность вашего мнения: Мы признаем ценность мнения каждого пользователя. Ваши отзывы помогают нам улучшать функционал и качество приложения.</string>
    <string name="app_policy_23">2) Быстрый отклик: Наша команда поддержки стремится реагировать на запросы пользователей максимально оперативно. Мы ценим ваше время и делаем все возможное для предоставления быстрого отклика.</string>
    <string name="app_policy_24">3) Улучшения на основе отзывов: Ваши комментарии становятся отправной точкой для внесения улучшений в приложение. Мы регулярно анализируем обратную связь, чтобы сделать ваш опыт использования приложения максимально комфортным.</string>
    <string name="app_policy_25">4) Анонимность: Мы уважаем вашу конфиденциальность. Возможность предоставлять обратную связь анонимно обеспечивает удобство и безопасность для пользователей.</string>
    <string name="app_rules">Правилаn\Приложения</string>

    <string name="rules_0">1. Тематика: Публикации должны касаться исключительно размещения вакансий на платформе Vakanciya.az. Вакансии должны быть связаны с поиском и предложением работы, требованиями к кандидатам и другими аспектами трудоустройства.</string>
    <string name="rules_1">2. Безнравственное содержание: Запрещены материалы, содержащие порнографию, вводящие в заблуждение информацией или предназначенные для взрослых.</string>
    <string name="rules_2">3. Насилие и террор: Запрещены объявления, содержащие изображения или описания насилия, террористических актов или других вредоносных действий.</string>
    <string name="rules_3">4. Пропаганда запрещенных вещей: Запрещено рекламировать или продвигать незаконные, опасные или запрещенные объекты, услуги или практики.</string>
    <string name="rules_4">5. Обман и мошенничество: Запрещено размещение объявлений с ложной или вводящей в заблуждение информацией относительно вакансий или требований к кандидатам.</string>
    <string name="rules_5">6. Нецензурный контент: Запрещены публикации, содержащие ненормативную лексику, угрозы или другие формы агрессии.</string>
    <string name="rules_6">7. Качество и релевантность: Публикации должны быть качественными, информативными и релевантными теме вакансий и требованиям к кандидатам.</string>
    <string name="rules_7">8. Спам и многократные публикации: Запрещено массовое размещение однотипных объявлений и навязчивый спам.</string>
    <string name="rules_8">9. Авторские права: Запрещено размещение материалов, нарушающих авторские права третьих лиц.</string>
    <string name="rules_9">10. Общественные нормы: Публикации не должны нарушать общепринятые нормы и ценности общества.</string>
    <string name="rules_10">11. Формат изображений: Предоставляемые изображения должны быть четкими, релевантными и соответствовать требованиям к визуализации вакансии или компании.</string>
    <string name="rules_11">12. Точность информации: Информация, предоставленная в объявлении, должна быть точной и соответствовать фактическому состоянию вакансии.</string>
    <string name="rules_12">13. Контактная информация: Запрещено размещение ложной или недействительной контактной информации. Все указанные контактные данные должны быть актуальными и позволять связаться с представителями компании.</string>
    <string name="rules_14">14. Соблюдение законов и нормативов: Размещаемые объявления и комментарии не должны нарушать действующие законы и нормативы, связанные с трудоустройством и размещением вакансий.</string>
    <string name="rules_18">15. Срок действия объявления: Установление максимального срока действия объявления может быть одним из правил для поддержания актуальности предложений.</string>
    <string name="rules_19">16. Соблюдение этических стандартов: Правила могут также включать требования к соблюдению этических стандартов в сфере трудоустройства и размещения вакансий.</string>
    <string name="rules_title">Правила Размещения\nВакансий</string>
    <string name="vakanciya_az">С Уважением Vakanciya.az</string>
    <string name="kiraye.az" translatable="false">С Уважением Vakanciya.az</string>
    <string name="title">Başlıq</string>
    <string name="google">Google müvəqqəti olaraq işləmir!</string>
    <string name="price_text_isEmptv">Договорная</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>>


</resources>