<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/awhite"
    tools:context=".Profile.SettingsItem.Item.RulesFragment">


    <androidx.constraintlayout.widget.ConstraintLayout


        android:id="@+id/constraintLayout8"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/bExit"
            android:layout_width="30dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/colorPrimaryDarkDarkTheme"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/baseline_arrow_back_ios_24_pro"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/app_rules"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/background2"
        android:backgroundTint="#00FFFFFF"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView116"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="7dp"
                android:fontFamily="serif"
                android:text="@string/rules_0"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView117"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="7dp"
                android:fontFamily="serif"
                android:text="@string/rules_1"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView118"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="7dp"
                android:fontFamily="serif"
                android:text="@string/rules_2"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView119"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="7dp"
                android:fontFamily="serif"
                android:text="@string/rules_3"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView120"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="7dp"
                android:fontFamily="serif"
                android:text="@string/rules_4"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView111"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="7dp"
                android:fontFamily="serif"
                android:text="@string/rules_5"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView112"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="7dp"
                android:fontFamily="serif"
                android:text="@string/rules_6"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView113"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="7dp"
                android:fontFamily="serif"
                android:text="@string/rules_7"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView114"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="7dp"
                android:fontFamily="serif"
                android:text="@string/rules_8"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView115"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="7dp"
                android:fontFamily="serif"
                android:text="@string/rules_9"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView106"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="7dp"
                android:fontFamily="serif"
                android:text="@string/rules_10"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView107"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="7dp"
                android:fontFamily="serif"
                android:text="@string/rules_11"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView108"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="7dp"
                android:fontFamily="serif"
                android:text="@string/rules_12"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView110"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="7dp"
                android:fontFamily="serif"
                android:text="@string/rules_14"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView104"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="7dp"
                android:fontFamily="serif"
                android:text="@string/rules_18"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView105"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="7dp"
                android:fontFamily="serif"
                android:text="@string/rules_19"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView121"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/manrope_semibold"
                android:gravity="center"
                android:text="@string/vakanciya_az"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>